# daedalus-bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  daedalus-bot.cpp  daedalus-bot.h  main.cpp
config/: default.json
docs/uml/: Strategies.uml
include/: BaseObject.h  DaedalusPrimitives.h  Trade.h  TradeBuilder.h  Utils.h
include/strategies/: BaseStrategy.h  InheritedStrategy.h
src/: BaseObject.cpp  Trade.cpp  TradeBuilder.cpp  Utils.cpp
src/strategies/: InheritedStrategy.cpp
test/: test.cpp
